# cwaggle

./: CMakeLists.txt  Makefile  README.md
docker/: Dockerfile  Makefile  debug.Dockerfile
example/: example.c
include/waggle/: config.h  filepublisher.h  plugin.h  rabbitmq.h  timeutil.h  uploader.h  wagglemsg.h
src/: timeutil.c  wagglemsg.c
src/plugin/: config.c  filepublisher.c  plugin.c  rabbitmq.c  uploader.c
src/waggle/data/: wagglemsg.c
src/waggle/plugin/: filepublisher.c  plugin.c  rabbitmq.c
